# aioq

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  example.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
backends/custom/: index.html
backends/mysql/: index.html
backends/postgres/: index.html
backends/redis/: index.html
demo/: enqueue.py  tasks.py
docs/: index.md
docs/backends/: custom.md  mysql.md  postgres.md  redis.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cron.md  dashboard.md  enqueueing.md  tasks.md  workers.md
docs/reference/: aarq.md  broker.md  models.md  taskdef.md  worker.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/cron/: index.html
guide/dashboard/: index.html
guide/enqueueing/: index.html
guide/tasks/: index.html
guide/workers/: index.html
reference/aarq/: index.html
reference/broker/: index.html
reference/models/: index.html
reference/taskdef/: index.html
reference/worker/: index.html
search/: search_index.json
src/aioq/: __init__.py  app.py  cli.py  cron.py  metrics.py  models.py  task.py  worker.py
src/aioq/backends/: __init__.py  base.py  mysql.py  postgres.py  redis.py
src/aioq/dashboard/: __init__.py  app.py
src/aioq/dashboard/templates/: _job_rows.html  base.html  index.html  job_detail.html  jobs.html
tests/: test_batch.py  test_cancel.py  test_cron.py  test_dependencies.py  test_dlq.py  test_integration_redis.py  test_metrics.py  test_models.py  test_mysql_broker.py  test_priority.py  test_redis_broker.py  test_retry.py
