[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioq"
version = "0.1.0"
description = "Async job queue with multiple backend support and built-in dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis[asyncio]>=5.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "anyio>=4.0",
    "click>=8.1",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]
cron = [
    "croniter>=2.0",
]
all = [
    "asyncpg>=0.29",
    "croniter>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis[aioredis]>=2.23",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "croniter>=2.0",
]

[project.scripts]
aioq = "aioq.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/aioq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
