[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioq"
version = "0.3.0"
description = "Async job queue with multiple backend support and built-in dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "anyio>=4.0",
    "click>=8.1",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]
cron = [
    "croniter>=2.0",
]
prometheus = [
    "prometheus-client>=0.20",
]
mysql = [
    "aiomysql>=0.2",
]
all = [
    "asyncpg>=0.29",
    "croniter>=2.0",
    "prometheus-client>=0.20",
    "aiomysql>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.23",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "croniter>=2.0",
    "pre-commit>=3.7",
    "prometheus-client>=0.20",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.scripts]
aioq = "aioq.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/aioq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a live external service (e.g. Redis)",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
